add local changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, user-scalable=no">
 
         <link rel="stylesheet" href="css/style.css">
+
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
         <title></title>
     </head>
     <body>
@@ -53,6 +56,9 @@
                                 <p class="text">Country</p>
                             </div>
                             <div class="input-container-input">
+                                <span class="icon">
+                                    <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                </span>
                                 <select class="select">
                                     <option>Select your Country</option>
                                     <option>United States</option>
